app/base/todo-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app
  namespace: todo
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  rules:
    - host: todo.app
      http:
        paths:
          - backend:
              service:
                name: todo-gitops
                port:
                  number: 8080
            pathType: ImplementationSpecific
